-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 6.0.0
-
None
-
-
86783985a0 (qt-creator/qt-creator/master) 86783985a0 (qt-creator/qt-creator/qmlprojectstorage)
See discussion in https://codereview.qt-project.org/c/qt-creator/qt-creator/+/385288
QtC should not need to document any permissions in its Info.plist that it doesn't need.
It likely masks the app's missing permission descriptions, so when the app is launched outside of QtC it will fail.
We don't know yet what it would take to decouple this.
For Gerrit Dashboard: QTCREATORBUG-26743 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
386978,11 | macOS: Add tool for decoupling Qt Creator permissions from user applications | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |